--- a/force-app/main/default/classes/July9thController.cls
+++ b/force-app/main/default/classes/July9thController.cls
@@ -1,12 +1,21 @@
-public class July9thController {
+public class ContactController {
     
-    @auraEnabled
-    public static void createContact(String firstname, String lastname, String email, String phone){
+    @AuraEnabled
+    public static List<Contact> createContactRecords(String firstname, String lastname, String email, String phone){
+    List<Contact> contactList = new List<Contact>();
+    if(contactList!= null){
         contact con = new contact();
-        con.firstname = firstname;
-        con.lastname = lastname;
-        con.email = email;
-        con.phone = phone;
-        Insert con;
+        con.FirstName = firstname;
+        con.LastName = lastname;
+        con.Email = email;
+        con.Phone = phone;
+        contactList.add(con);
+    }
+    if(!contactList.isEmpty()){
+        System.debug('Created Contact Records-->'+contactList);
+        insert contactList;
+        return contactList;
+    }
+    return null;
     }
 }
