--- a/force-app/main/default/classes/NewCaseListController.cls
+++ b/force-app/main/default/classes/NewCaseListController.cls
@@ -1,7 +1,7 @@
 public with sharing class NewCaseListController {
    public List<Case> getNewCases()
     {
-        List<Case> lst = [Select CaseNumber from Case where status='New'];
-        return lst;
+        List<Case> caselist = [Select CaseNumber from Case where status='New'];
+        return caselist;
      }
 }
