--- a/force-app/main/default/classes/CallApexController.cls
+++ b/force-app/main/default/classes/CallApexController.cls
@@ -1,7 +1,7 @@
 public with sharing class CallApexController {
     
     @AuraEnabled(Cacheable=true)
-    public static List<Account> methodTest(){
+    public static List<Account> getAccounts(){
         List<Account> accList = new List<Account>();
         
         accList = [SELECT id, Name, Industry,Rating From Account limit 10];
